test/regress/ext:gc/br_on_cast04.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8c\80\80\80\00\02\5f"
    "\01\77\00\60\01\63\00\01\64\00\03\82\80\80\80\00"
    "\01\01\0a\90\80\80\80\00\01\8a\80\80\80\00\00\20"
    "\00\fb\18\01\00\00\00\0b"
  )
  "type mismatch"
)
